# Video_editor

./: .gitignore  README.md  gui.py  main.py  mode.py  pyproject.toml  requirements.txt  video_editor.py  video_editor_parser.py
Tests/: VideoEditorTests.py
VideoEditor/: __init__.py  progress_bar.py  utils.py  video_editor.py
gui/: __init__.py  application.py  base.py  cache_handler.py  constructor.py  message.py  my_async.py  my_dialog_window.py  qt_extension.py  qt_extensions.py  supporting_windows.py  utils.py  windows_commutator.py
