[tool.poetry]
name = "video-editor"
version = "0.1.0"
description = "Best editor ever ;-)"
authors = ["dimastarsis <kurilin.dmitriy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
moviepy = "^1.0.3"
pyqt6 = "^6.5.2"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
